Update admin post item styles and enhance hashtag management interface. Introduce flexbox layout for post titles, adjust badge styles for better visibility, and ensure hashtags are ordered by label in the admin view. Refactor delete action structure for improved clarity in the admin hashtags index.

--- a/app/assets/stylesheets/admin/_admin-post-item.scss
+++ b/app/assets/stylesheets/admin/_admin-post-item.scss
@@ -5,11 +5,21 @@
 }
 
 .admin-post-item__title {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  flex-direction: row;
   flex-grow: 1;
   font-size: $base-font-size;
 
   .not-published & {
     color: rgba($base-font-color, 0.3);
+  }
+
+  .badge {
+    margin-left: $x-small-spacing;
+    transform: translateY(1px);
+    color: $base-font-color;
   }
 }
 
